{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 184,
  "lineage": "8fe1740f-caa4-4304-4cfe-67c11f6967ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "defaultnacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:network-acl/acl-0d6f385577056853d",
            "default_network_acl_id": "acl-0d6f385577056853d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d6f385577056853d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "536067246973",
            "subnet_ids": [
              "subnet-0224701533162bf93",
              "subnet-0d8a021c56cac96ac",
              "subnet-0ddcb510b1e5bddd0",
              "subnet-0f5570f6b5f2c82c4"
            ],
            "tags": {
              "Name": "defaultroute"
            },
            "tags_all": {
              "Name": "defaultroute"
            },
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "defaultroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:route-table/rtb-067904851ee537792",
            "default_route_table_id": "rtb-067904851ee537792",
            "id": "rtb-067904851ee537792",
            "owner_id": "536067246973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "defaultroute"
            },
            "tags_all": {
              "Name": "defaultroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "defaultsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:security-group/sg-084a58b0823fc5a05",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-084a58b0823fc5a05",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "536067246973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "defaultsg"
            },
            "tags_all": {
              "Name": "defaultsg"
            },
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lampsetup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbe82b60906d24",
            "arn": "arn:aws:ec2:eu-west-3:536067246973:instance/i-05f0ecf0135288963",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f0ecf0135288963",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dawan",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ddb177017feaa6fc",
            "private_dns": "ip-10-0-30-224.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.224",
            "public_ip": "35.180.202.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0415d647eab8cb1d9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddcb510b1e5bddd0",
            "tags": {
              "Name": "Lamp"
            },
            "tags_all": {
              "Name": "Lamp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9c0e17ccdd34c74"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbe82b60906d24",
            "arn": "arn:aws:ec2:eu-west-3:536067246973:instance/i-0e96cd647998b4fc7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e96cd647998b4fc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dawan",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8ddcc052ee17d24",
            "private_dns": "ip-10-0-103-80.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.103.80",
            "public_ip": "35.180.125.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df8ad78b4e15397b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8a021c56cac96ac",
            "tags": {
              "Name": "Lamp"
            },
            "tags_all": {
              "Name": "Lamp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9c0e17ccdd34c74"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:internet-gateway/igw-0f44a55633d7a302f",
            "id": "igw-0f44a55633d7a302f",
            "owner_id": "536067246973",
            "tags": {
              "Name": "lamp"
            },
            "tags_all": {
              "Name": "lamp"
            },
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lampalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:loadbalancer/app/lamp-alb/256aed17d520ee31",
            "arn_suffix": "app/lamp-alb/256aed17d520ee31",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lamp-alb-1360436561.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:loadbalancer/app/lamp-alb/256aed17d520ee31",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lamp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0930646c72483ed5d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d8a021c56cac96ac"
              },
              {
                "subnet_id": "subnet-0ddcb510b1e5bddd0"
              }
            ],
            "subnets": [
              "subnet-0d8a021c56cac96ac",
              "subnet-0ddcb510b1e5bddd0"
            ],
            "tags": {
              "Name": "alb"
            },
            "tags_all": {
              "Name": "alb"
            },
            "vpc_id": "vpc-0736150f941988fcd",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:listener/app/lamp-alb/256aed17d520ee31/002ada516526e9a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:targetgroup/lamp-alb-target/97bafd869ca7c733",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:listener/app/lamp-alb/256aed17d520ee31/002ada516526e9a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:loadbalancer/app/lamp-alb/256aed17d520ee31",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lampalb",
            "aws_lb_target_group.lamptg",
            "aws_security_group.lb_sg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lamptg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:targetgroup/lamp-alb-target/97bafd869ca7c733",
            "arn_suffix": "targetgroup/lamp-alb-target/97bafd869ca7c733",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,202",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:targetgroup/lamp-alb-target/97bafd869ca7c733",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lamp-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ipattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:targetgroup/lamp-alb-target/97bafd869ca7c733-20230226044211125000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:targetgroup/lamp-alb-target/97bafd869ca7c733",
            "target_id": "i-05f0ecf0135288963"
          },
          "dependencies": [
            "aws_instance.lampsetup",
            "aws_lb_target_group.lamptg",
            "aws_security_group.web_sg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:targetgroup/lamp-alb-target/97bafd869ca7c733-20230226044211000700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:536067246973:targetgroup/lamp-alb-target/97bafd869ca7c733",
            "target_id": "i-0e96cd647998b4fc7"
          },
          "dependencies": [
            "aws_instance.lampsetup",
            "aws_lb_target_group.lamptg",
            "aws_security_group.web_sg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f44a55633d7a302f",
            "id": "r-rtb-00eb1f43aeb60b04c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00eb1f43aeb60b04c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.webroute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:route-table/rtb-01cf58bfc89eb9b06",
            "id": "rtb-01cf58bfc89eb9b06",
            "owner_id": "536067246973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lamp"
            },
            "tags_all": {
              "Name": "lamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:route-table/rtb-00eb1f43aeb60b04c",
            "id": "rtb-00eb1f43aeb60b04c",
            "owner_id": "536067246973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lamp"
            },
            "tags_all": {
              "Name": "lamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015c3b8a92f9dd702",
            "route_table_id": "rtb-01cf58bfc89eb9b06",
            "subnet_id": "subnet-0f5570f6b5f2c82c4"
          },
          "dependencies": [
            "aws_route_table.dbroute",
            "aws_subnet.dbsubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8cdc5e0c1639bf9",
            "route_table_id": "rtb-01cf58bfc89eb9b06",
            "subnet_id": "subnet-0224701533162bf93"
          },
          "dependencies": [
            "aws_route_table.dbroute",
            "aws_subnet.dbsubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_web_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0688741510b3cf813",
            "route_table_id": "rtb-00eb1f43aeb60b04c",
            "subnet_id": "subnet-0ddcb510b1e5bddd0"
          },
          "dependencies": [
            "aws_route_table.webroute",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aba5cf3f7a515429",
            "route_table_id": "rtb-00eb1f43aeb60b04c",
            "subnet_id": "subnet-0d8a021c56cac96ac"
          },
          "dependencies": [
            "aws_route_table.webroute",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:security-group/sg-0e7fd42603c3ada22",
            "description": "controls access to the LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7fd42603c3ada22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9c0e17ccdd34c74"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dbsg",
            "name_prefix": "",
            "owner_id": "536067246973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dbsg"
            },
            "tags_all": {
              "Name": "dbsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:security-group/sg-0930646c72483ed5d",
            "description": "controls access to the LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0930646c72483ed5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lbsg",
            "name_prefix": "",
            "owner_id": "536067246973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lbsg"
            },
            "tags_all": {
              "Name": "lbsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:security-group/sg-0f9c0e17ccdd34c74",
            "description": "controls access to the LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9c0e17ccdd34c74",
            "ingress": [
              {
                "cidr_blocks": [
                  "78.125.143.214/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "78.125.143.214/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "78.125.143.214/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0930646c72483ed5d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websg",
            "name_prefix": "",
            "owner_id": "536067246973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg"
            },
            "tags_all": {
              "Name": "websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2226237732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e7fd42603c3ada22",
            "security_group_rule_id": "sgr-0d2bf33073a9c7b69",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "debuglaptop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "78.125.143.214/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1723921362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f9c0e17ccdd34c74",
            "security_group_rule_id": "sgr-0e92c71f94cc601a9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "78.125.143.214/32"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1340822665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0f9c0e17ccdd34c74",
            "security_group_rule_id": "sgr-0306bc0c1d013d840",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2204267389",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0930646c72483ed5d",
            "security_group_rule_id": "sgr-08207dc2f6a8f34f7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_to_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-2567478135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f9c0e17ccdd34c74",
            "security_group_rule_id": "sgr-07268c4fe1341e9b6",
            "self": false,
            "source_security_group_id": "sg-0930646c72483ed5d",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "78.125.143.214/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2591582572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f9c0e17ccdd34c74",
            "security_group_rule_id": "sgr-04a6499cbd563f3d1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2789161233",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f9c0e17ccdd34c74",
            "security_group_rule_id": "sgr-0f54768116bf06d84",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1260643683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e7fd42603c3ada22",
            "security_group_rule_id": "sgr-0bcad80d8b8cdafe8",
            "self": false,
            "source_security_group_id": "sg-0f9c0e17ccdd34c74",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2725015263",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0930646c72483ed5d",
            "security_group_rule_id": "sgr-054ee8b88a38bd7ee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:subnet/subnet-0f5570f6b5f2c82c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5570f6b5f2c82c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536067246973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-0"
            },
            "tags_all": {
              "Name": "db-subnet-0"
            },
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:subnet/subnet-0224701533162bf93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0224701533162bf93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536067246973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-1"
            },
            "tags_all": {
              "Name": "db-subnet-1"
            },
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "websubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:subnet/subnet-0ddcb510b1e5bddd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddcb510b1e5bddd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536067246973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-subnet-0"
            },
            "tags_all": {
              "Name": "web-subnet-0"
            },
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:subnet/subnet-0d8a021c56cac96ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a021c56cac96ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536067246973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-subnet-1"
            },
            "tags_all": {
              "Name": "web-subnet-1"
            },
            "vpc_id": "vpc-0736150f941988fcd"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lamp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:536067246973:vpc/vpc-0736150f941988fcd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6f385577056853d",
            "default_route_table_id": "rtb-067904851ee537792",
            "default_security_group_id": "sg-084a58b0823fc5a05",
            "dhcp_options_id": "dopt-0d2ab0b39f499de52",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0736150f941988fcd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067904851ee537792",
            "owner_id": "536067246973",
            "tags": {
              "Name": "lamp"
            },
            "tags_all": {
              "Name": "lamp"
            }
          }
        }
      ]
    }
  ]
}